# DIPP

./: .gitignore  .gitmodules  11-17-results.csv  24-11-perf-benchmark-1.csv  24-11-perf-benchmark.csv  Makefile  README.md  build  compile_external_module.sh  compile_external_modules.sh  configure  configure_run  errors.yaml  mem_increase  meson.build  meson_options.txt  modules.txt  perf-benchmark.sh  perf.sh  performance  performance-large-test  run_e2e  run_e2e_throughput  storage.vmem  timer.sh
external_modules/: addOne.c  addition.c  bw_convert.c  division.c  empty.c  flip_horizontally.c  horizontal_duplication.c  identity.c  multiply.c  pi.c  scofus_comp.c  subtractOne.c  subtraction.c  to_infinity.c  types.h
include/: types.h
protos/: config.pb-c.c  config.pb-c.h  config.proto  metadata.proto  pipeline_config.proto  tester.pb-c.c  tester.pb-c.h  tester.proto
scripts/: plot-perf-results.py  plot-results.py
sim/: camera_control.c  camera_control.h  metadata.pb-c.h
sim/better_sim/: camera_control.cpp  common.hpp  errors.hpp  message_queue.cpp  message_queue.hpp
sim/simple_sim/: camera_control.c
src/: arb_params.c  arb_params.h  change_arb_param.c  csp_hooks.c  dipp_config.c  dipp_configs.c  dipp_error.c  dipp_main.c  dipp_process.c  hooks.c  hooks.h  main.c  param_config.h  paramid.h  pipeline  pipeline.c  pipeline_config.pb-c.c  serial.c  types.h  vmem_config.c  vmem_config.h  vmem_storage.h
src/include/: dipp_config.h  dipp_configs.h  dipp_error.h  dipp_main.h  dipp_process.h  dipp_run.h
src/include/param/: dipp_config_param.h  dipp_error_param.h  dipp_paramids.h  dipp_process_param.h  vmem_upload_param.h
src/include/protobuf/: module_config.pb-c.h
src/include/vmem/: vmem_ring_buffer.h  vmem_storage.h  vmem_upload.h  vmem_upload_local.h
src/modules/: addition.c  module_addition.c  module_addition.h  module_multiplication.c  module_multiplication.h  module_subtraction.c  module_subtraction.h  multiplication.c  subtraction.c
src/pipeline/: error.c  error.h  pipeline  pipeline.c  pipeline.h  pipeline_config.pb-c.c  pipeline_config.pb-c.h  types.h
src/protobuf/: metadata.pb-c.c  module_config.pb-c.c
src/vmem/: vmem_ring_buffer.c  vmem_storage.c  vmem_upload.c  vmem_upload_local.c
test_cam/: camera_control.c  camera_control.h  camera_controller.c  compile  metadata.pb-c.c  metadata.pb-c.h
